[metadata]
name = game-engine-finder
version = 0.0.0.46
description = Python script for easily figuring out the engine used for a game.
long_description = file: README.md
long_description_content_type = text/markdown
author = Vetle Ledaal
keywords = game, engine, pcgamingwiki
platforms = any
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
project_urls =
	Source = https://github.com/vetleledaal/game-engine-finder
    Bug Tracker = https://github.com/vetleledaal/game-engine-finder/issues

[options]
packages = find:
python_requires = >=3.6
py_modules =
    find_engine
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    find-engine = find_engine:set_clip_detect

[options.packages.find]
exclude = tests
